[gd_scene load_steps=16 format=3 uid="uid://qj6t2sxa8ec5"]

[ext_resource type="Texture2D" uid="uid://ba5gblyrwmbpq" path="res://Misc/Bg.png" id="1_24oyo"]
[ext_resource type="Script" path="res://main.gd" id="2_hhpdm"]
[ext_resource type="FontFile" uid="uid://byc5grx0050tc" path="res://Misc/pixel_font.ttf" id="2_xk3by"]
[ext_resource type="Script" path="res://player.gd" id="3_1eqqa"]
[ext_resource type="Script" path="res://cpu.gd" id="4_tn50y"]
[ext_resource type="Script" path="res://ball.gd" id="4_xgg3p"]
[ext_resource type="AudioStream" uid="uid://812828i8ppuy" path="res://Misc/PingPong.mp3" id="6_qdbsp"]
[ext_resource type="AudioStream" uid="uid://cqatpie8hwtgf" path="res://Misc/Point.mp3" id="7_me8ef"]
[ext_resource type="AudioStream" uid="uid://bybceupgopt7x" path="res://Misc/CPUPoint.mp3" id="7_mst8h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4xjv"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nxwmc"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bhgb"]
size = Vector2(1165, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ncb2f"]
size = Vector2(1169.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cj4v6"]
size = Vector2(20, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tf8uw"]
size = Vector2(20, 647)

[node name="Main" type="Sprite2D"]
texture_filter = 1
scale = Vector2(1.00087, 1.04784)
texture = ExtResource("1_24oyo")
centered = false
script = ExtResource("2_hhpdm")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("3_1eqqa")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_a4xjv")

[node name="CPU" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("4_tn50y")

[node name="ColorRect" type="ColorRect" parent="CPU"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CPU"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_a4xjv")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("4_xgg3p")

[node name="ColorRect" type="ColorRect" parent="Ball"]
offset_right = 10.0
offset_bottom = 10.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(5, 5)
shape = SubResource("RectangleShape2D_nxwmc")

[node name="BounceSound" type="AudioStreamPlayer2D" parent="Ball"]
stream = ExtResource("6_qdbsp")

[node name="Walls" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2(576, -10)
shape = SubResource("RectangleShape2D_8bhgb")

[node name="Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2(575.5, 657.543)
shape = SubResource("RectangleShape2D_ncb2f")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-10, 324)
shape = SubResource("RectangleShape2D_cj4v6")

[node name="LosePoint" type="AudioStreamPlayer2D" parent="ScoreLeft"]
stream = ExtResource("7_mst8h")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1162, 322.5)
shape = SubResource("RectangleShape2D_tf8uw")

[node name="WinPoint" type="AudioStreamPlayer2D" parent="ScoreRight"]
stream = ExtResource("7_me8ef")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="Hud"]
offset_left = 456.0
offset_top = 5.0
offset_right = 506.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_xk3by")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CPUScore" type="Label" parent="Hud"]
offset_left = 648.0
offset_top = 5.0
offset_right = 698.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_xk3by")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
